--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
 
     <div class="todo__itemContainer">
 
+        {% if incomplete %}
         <div class="card todo__innerItemContainer">
             <h2 class="todo__itemHeader">To Do's 🕐</h2>
 
@@ -33,28 +34,38 @@
                 {% for todo in incomplete %}
                 <li class="todo__item">
                     <p>{{ todo.text }}</p>
-                    <a class="btn btn-outline-success" href="#" class="">Complete
+                    <a class="btn btn-outline-success" href="{{ url_for('complete',id=todo.id)  }}">Complete
                         ➡️</a>
-                    <a class="todo__close" href="#" class="">❌</a>
+                        
+                    <a class="todo__close" href="{{ url_for('delete',id=todo.id)}}" >❌</a>
                 </li>
                 {% endfor %}
             </ul>
         </div>
+        {% endif %}
+
+        {% if complete %}
 
         <div class="card todo__innerItemContainer">
             <h2 class="todo__itemHeader">Done ✅</h2>
 
             <ul class="todo__container">
 
+                {% for todo in complete %}
                 <li class="todo__item">
-                    <p>My finished task X</p>
-                    <a class="btn btn-outline-secondary" href="#" class="">⬅️
+                    <p>{{ todo.text }}</p>
+                    <a class="btn btn-outline-success" href="{{ url_for('uncheck',id=todo.id)  }}">⬅️
                         Undo</a>
-                    <a class="todo__close" href="#" class="">❌</a>
+                        
+                    <a class="todo__close" href="{{ url_for('delete',id=todo.id)}}" >❌</a>
+                </li>
+                {% endfor %}
+
                 </li>
 
             </ul>
         </div>
+        {% endif %}
     </div>
 </div>
 
